--- a/hobbies.html
+++ b/hobbies.html
@@ -13,7 +13,7 @@
 
     <h3>Intressen</h3>
     <ol type="">
-        <li><a href="https://wowclassic.blizzard.com/en-us/">Gaming</a></li>
+        <li><a href="https://wowclassic.blizzard.com/en-us/" target=”_blank”>Gaming</a></li>
         <li><a href="https://www.dndbeyond.com/"> </a> Rollspel </li>
         <li>Matlagning</li>
     </ol>
